logs/Slang/generated/keywords/5.6.2--keyword_localparam.sv.log
name: localparam
description: The 'localparam' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_localparam.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_localparam.sv:8:8: error: expected declarator
    bit localparam;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_localparam.sv:8:19: error: expected declarator
    bit localparam;
                  ^
